refactor: 페이징 처리 쿼리 개선